# fmt

./: .ghci  .travis.yml  CHANGELOG.md  LICENSE  README.md  fmt.cabal  stack.yaml
bench/: Main.hs
include/: overlap.h
lib/: Fmt.hs
lib/Fmt/: IO.hs  Instances.hs  Internal.hs  Time.hs
lib/Fmt/Internal/: Core.hs  Format.hs  Formatters.hs  Generic.hs  Numeric.hs  Template.hs  Tuple.hs
tests/: Main.hs  doctest-config.json  doctests.hs
