name:                fmt
version:             0.0.0.2
synopsis:            Nice formatting library
description:
  Nice formatting library
homepage:            http://github.com/aelve/fmt
bug-reports:         http://github.com/aelve/fmt/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Text
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/fmt.git

library
  exposed-modules:     Fmt
                       Fmt.IO
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <5,
                       text,
                       text-format >= 0.3
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6 && <5
                     , fmt
                     , hspec >= 2.2 && < 2.4
                     , text
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      tests
  default-language:    Haskell2010
